<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/wallpaper">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:background="@drawable/kotak">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/musiclogo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/cabin"
            android:gravity="center"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/cabin"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:text="@string/login"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/loginbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="60dp"
            android:text="@string/login1"
            android:background="@drawable/buttonshape"
            android:textColor="#000000"
            android:backgroundTint="#ffffff"
            android:drawableLeft="@drawable/googlelogo"
            android:fontFamily="@font/cabin"
            />

    </LinearLayout>

</LinearLayout>