<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen"
    android:orientation="vertical"
    android:background="@drawable/wallpaper">>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:background="@drawable/kotak">

        <Button
            android:id="@+id/logoutbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="60dp"
            android:text="@string/logout"
            android:background="@drawable/buttonshape"
            android:textColor="#000000"
            android:backgroundTint="#ffffff"
            android:fontFamily="@font/cabin"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:fontFamily="@font/cabin"
            android:gravity="center"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="40sp" />

        <Button
            android:id="@+id/createbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="60dp"
            android:text="@string/create"
            android:background="@drawable/buttonshape"
            android:textColor="#000000"
            android:backgroundTint="#ffffff"
            android:fontFamily="@font/cabin"
            android:drawableLeft="@drawable/addicon"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:drawableLeft="@drawable/searchicon"/>

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight="6"
            android:textColor="#ffffff"
            android:inputType="textPersonName"
            android:layout_marginHorizontal="20dp"
            android:hint="Search..."
            android:textSize="20sp"
            android:textColorHint="#ffffff"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/showingSong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </ScrollView>


</LinearLayout>

